Fixed the issue of the background color not covering the entire text and image in the .subcontainer.

--- a/react-vite/src/components/AnimePage/AnimePage.css
+++ b/react-vite/src/components/AnimePage/AnimePage.css
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: row;
     width: 75%;
+    height: fit-content;
     column-gap: 50px;
 }
 
